fixes logo spacing in responsivness

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -93,7 +93,7 @@
         background: none;
         background-color: #E6E6E6;
         clear: both;
-        margin-top: -5%;
+        margin-top: 50px;
     }
 }
 
